# jessaminescikitlearn

./: .gitignore  Development notes for scikit-learn.md  Notes.md  README.md  Tools notes.md  dev-juliapkg.json  juliapkg.json  pyproject.toml
.github/workflows/: build.yml
src/jessaminescikitlearn/: Regression.py  __about__.py  __init__.py  __main__.py  juliapkg.json
src/jessaminescikitlearn/srbench/: regressor.py
tests/: __init__.py  test_fit.py  test_fit_rational.py  test_init.py  test_skl.py
